# repolens

./: .gitignore  .repolens.toml  .repometa.toml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: acceptance.jsonl
docs/: agent-rule-template.md  how-it-works.md
repolens/: __init__.py  __main__.py  bench.py  chunk.py  cli.py  digest.py  discover.py  enrich.py  env.py  find.py  frontmatter.py  hookgen.py  index.py  lint.py  log.py  mapgen.py  purpose.py  root.py  ruledoc.py  rulegen.py  schema.py  semantic.py  templates.py
tests/: test_repolens.py
