[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repolens"
version = "0.6.1"
description = "Ranked, described search over a repo's docs + code + data (including gitignored content), plus a typed corpus linter. Built for repos worked by a grep-on-demand agent."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Hawkes" }]
keywords = ["repository", "search", "index", "lint", "findability", "claude-code", "agent", "fts5"]
dependencies = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

[project.scripts]
repolens = "repolens.cli:main"

[project.urls]
Homepage = "https://github.com/hawkesj12/repolens"
Repository = "https://github.com/hawkesj12/repolens"
Issues = "https://github.com/hawkesj12/repolens/issues"

[tool.hatch.build.targets.wheel]
packages = ["repolens"]

[tool.pytest.ini_options]
pythonpath = ["."]
