[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repolens"
version = "0.9.0"
description = "Ranked, described search over a repo's docs + code + data (including gitignored content), plus a typed corpus linter. Built for repos worked by a grep-on-demand agent."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Justin Hawkes" }]
keywords = ["repository", "search", "index", "lint", "findability", "claude-code", "agent", "fts5"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]

# The core is stdlib-only. Semantic (hybrid) search is an OPT-IN extra: pip install
# 'repolens[semantic]'. fastembed = ONNX embeddings on CPU (no service, no Ollama);
# sqlite-vec = the fast vec0 KNN path (repolens falls back to numpy brute-force cosine
# when a python sqlite3 build can't load the extension); numpy backs that fallback.
[project.optional-dependencies]
semantic = ["fastembed>=0.3", "sqlite-vec>=0.1", "numpy>=1.24"]

[project.scripts]
repolens = "repolens.cli:main"

[project.urls]
Homepage = "https://github.com/hawkesj12/repolens"
Repository = "https://github.com/hawkesj12/repolens"
Issues = "https://github.com/hawkesj12/repolens/issues"

[tool.hatch.build.targets.wheel]
packages = ["repolens"]

[tool.pytest.ini_options]
pythonpath = ["."]

# Optional semantic deps have no type stubs — they're lazy-imported and gated by
# semantic.available(), so a missing stub is expected, not a type error.
[[tool.mypy.overrides]]
module = ["fastembed", "sqlite_vec"]
ignore_missing_imports = true
